--- a/Owncloud iOs Client/Tabs/FileTab/Share/Cells/ShareFileCell.xib
+++ b/Owncloud iOs Client/Tabs/FileTab/Share/Cells/ShareFileCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -26,7 +26,7 @@
                         </constraints>
                     </imageView>
                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" text="File Name" lineBreakMode="tailTruncation" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yje-bh-jmU">
-                        <rect key="frame" x="108" y="25" width="204" height="45"/>
+                        <rect key="frame" x="108" y="25" width="204" height="44"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
@@ -38,11 +38,16 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Size" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5i0-Uz-NhM">
-                        <rect key="frame" x="108" y="74" width="204" height="20"/>
+                        <rect key="frame" x="108" y="73" width="204" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VOr-hs-YaC">
+                        <rect key="frame" x="279" y="16" width="22" height="22"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                        <state key="normal" title="Button" image="CopyLinkShareipad.png"/>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="5i0-Uz-NhM" firstAttribute="top" secondItem="Bqj-YB-hKp" secondAttribute="bottom" constant="4" id="0Sm-LB-UKl"/>
@@ -102,8 +107,12 @@
                 <outlet property="fileName" destination="Yje-bh-jmU" id="A8X-J2-agA"/>
                 <outlet property="fileSize" destination="5i0-Uz-NhM" id="mDs-JE-Xom"/>
                 <outlet property="folderName" destination="Bqj-YB-hKp" id="vC3-yA-HHn"/>
+                <outlet property="privateLinkButton" destination="VOr-hs-YaC" id="S5C-6c-b76"/>
             </connections>
             <point key="canvasLocation" x="419" y="421"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="CopyLinkShareipad.png" width="55" height="55"/>
+    </resources>
 </document>
