--- a/Owncloud iOs Client/Cells/CustomCell/CustomCellFileAndDirectory.xib
+++ b/Owncloud iOs Client/Cells/CustomCell/CustomCellFileAndDirectory.xib
@@ -1,99 +1,119 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="SourceSansPro-Regular.otf">
+            <string>SourceSansPro-Regular</string>
+        </array>
+        <array key="SourceSansPro-Semibold.otf">
+            <string>SourceSansPro-Semibold</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomCellFileAndDirectory"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="FileAndDirectoryCell" id="2" customClass="CustomCellFileAndDirectory">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="FileAndDirectoryCell" rowHeight="90" id="2" customClass="CustomCellFileAndDirectory">
+            <rect key="frame" x="0.0" y="0.0" width="365" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2" id="sQq-jC-UEV">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="53"/>
+                <rect key="frame" x="0.0" y="0.0" width="365" height="89"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3">
-                        <rect key="frame" x="60" y="10" width="228" height="20"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                        <color key="highlightedColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="5">
-                        <rect key="frame" x="9" y="11" width="32" height="32"/>
+                        <rect key="frame" x="9" y="20" width="50" height="50"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="32" id="nyd-Y2-38a"/>
-                            <constraint firstAttribute="width" constant="32" id="zBp-Gn-ztR"/>
+                            <constraint firstAttribute="height" constant="50" id="nyd-Y2-38a"/>
+                            <constraint firstAttribute="width" constant="50" id="zBp-Gn-ztR"/>
                         </constraints>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7">
-                        <rect key="frame" x="24" y="11" width="32" height="32"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="74V-Vo-VSv" userLabel="File Status Image View">
+                        <rect key="frame" x="34" y="45" width="25" height="25"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="32" id="OHT-3x-PxK"/>
-                            <constraint firstAttribute="height" constant="32" id="zCt-0e-HdN"/>
+                            <constraint firstAttribute="width" constant="25" id="H4A-ph-Ba2"/>
+                            <constraint firstAttribute="height" constant="25" id="pxr-eo-Ofk"/>
                         </constraints>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="Nv0-oE-v77">
-                        <rect key="frame" x="302" y="8" width="12" height="12"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="12" id="Lr8-DK-kZE"/>
-                            <constraint firstAttribute="height" constant="12" id="Qtb-vV-9dq"/>
-                        </constraints>
-                    </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="LZy-r3-ulR">
-                        <rect key="frame" x="302" y="32" width="12" height="12"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="12" id="REs-am-Vvi"/>
-                            <constraint firstAttribute="width" constant="12" id="cOb-5h-BwB"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="11">
-                        <rect key="frame" x="60" y="32" width="228" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="15" id="mQ8-I9-mj9"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                        <color key="textColor" white="0.50082687043795615" alpha="1" colorSpace="calibratedWhite"/>
-                        <color key="highlightedColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="One Month Ago - 14 files inside" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GLa-Gg-rfq" userLabel="File Info Label">
+                        <rect key="frame" x="67" y="44.5" width="204" height="16.5"/>
+                        <fontDescription key="fontDescription" name="SourceSansPro-Regular" family="Source Sans Pro" pointSize="13"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QpB-pi-hRP" userLabel="Image Available Offline">
-                        <rect key="frame" x="24" y="11" width="32" height="32"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Folder Available offline" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L8z-3T-bfY" userLabel="Shared Info Label">
+                        <rect key="frame" x="95" y="64" width="176" height="20"/>
+                        <fontDescription key="fontDescription" name="SourceSansPro-Semibold" family="Source Sans Pro" pointSize="13"/>
+                        <color key="textColor" red="0.45098039215686275" green="0.80784313725490198" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Example of normal folder" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3">
+                        <rect key="frame" x="67" y="20" width="204" height="21.5"/>
+                        <fontDescription key="fontDescription" name="SourceSansPro-Semibold" family="Source Sans Pro" pointSize="17"/>
+                        <color key="highlightedColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PLc-nO-L3r" userLabel="Shared Info Image View">
+                        <rect key="frame" x="67" y="64" width="20" height="20"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="32" id="BPr-gx-wFn"/>
-                            <constraint firstAttribute="height" constant="32" id="W2J-bx-38m"/>
+                            <constraint firstAttribute="width" constant="20" id="5gs-Qg-n0L"/>
+                            <constraint firstAttribute="height" constant="20" id="dJT-6y-1PB"/>
                         </constraints>
                     </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="61k-z8-XyA" userLabel="Shared Info Button">
+                        <rect key="frame" x="276" y="32.5" width="25" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="25" id="r2G-eN-27g"/>
+                            <constraint firstAttribute="height" constant="25" id="zcE-dJ-FhW"/>
+                        </constraints>
+                        <state key="normal" title="Button"/>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W3O-NA-GVU" userLabel="Options Button">
+                        <rect key="frame" x="322" y="30" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="gdi-1b-EY6"/>
+                            <constraint firstAttribute="height" constant="30" id="mqh-e3-s0B"/>
+                        </constraints>
+                        <state key="normal" title="Button"/>
+                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="LZy-r3-ulR" firstAttribute="top" secondItem="11" secondAttribute="top" id="CVc-Z9-znj"/>
-                    <constraint firstItem="LZy-r3-ulR" firstAttribute="leading" secondItem="11" secondAttribute="trailing" constant="14" id="Dcn-WI-AP4"/>
-                    <constraint firstItem="5" firstAttribute="top" secondItem="7" secondAttribute="top" id="Giz-2e-uer"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="LZy-r3-ulR" secondAttribute="trailing" constant="-2" id="Iyn-nF-Ur1"/>
-                    <constraint firstItem="3" firstAttribute="leading" secondItem="7" secondAttribute="trailing" constant="4" id="MuK-hv-lLa"/>
-                    <constraint firstItem="QpB-pi-hRP" firstAttribute="leading" secondItem="sQq-jC-UEV" secondAttribute="leadingMargin" constant="16" id="OeS-St-quy"/>
+                    <constraint firstItem="L8z-3T-bfY" firstAttribute="leading" secondItem="PLc-nO-L3r" secondAttribute="trailing" constant="8" id="1AE-uH-p3j"/>
+                    <constraint firstItem="PLc-nO-L3r" firstAttribute="top" secondItem="GLa-Gg-rfq" secondAttribute="bottom" constant="3" id="A1g-1W-W5Y"/>
+                    <constraint firstItem="61k-z8-XyA" firstAttribute="leading" secondItem="GLa-Gg-rfq" secondAttribute="trailing" constant="5" id="Abx-uK-cSB"/>
+                    <constraint firstItem="GLa-Gg-rfq" firstAttribute="top" secondItem="3" secondAttribute="bottom" constant="3" id="FP0-dk-3q3"/>
+                    <constraint firstItem="74V-Vo-VSv" firstAttribute="bottom" secondItem="5" secondAttribute="bottom" id="GSd-yV-sGU"/>
+                    <constraint firstItem="GLa-Gg-rfq" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" id="Kff-qp-k3C"/>
+                    <constraint firstItem="L8z-3T-bfY" firstAttribute="bottom" secondItem="PLc-nO-L3r" secondAttribute="bottom" id="KtS-ka-NrF"/>
+                    <constraint firstItem="W3O-NA-GVU" firstAttribute="leading" secondItem="61k-z8-XyA" secondAttribute="trailing" constant="21" id="NoY-GO-i1y"/>
                     <constraint firstItem="5" firstAttribute="leading" secondItem="sQq-jC-UEV" secondAttribute="leadingMargin" constant="1" id="Sbt-zf-CoG"/>
-                    <constraint firstItem="11" firstAttribute="top" secondItem="3" secondAttribute="bottom" constant="2" id="d8F-WH-F4Y"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="Nv0-oE-v77" secondAttribute="trailing" constant="-2" id="dDI-VR-MUy"/>
-                    <constraint firstItem="7" firstAttribute="leading" secondItem="sQq-jC-UEV" secondAttribute="leadingMargin" constant="16" id="eoB-Vm-11G"/>
-                    <constraint firstItem="11" firstAttribute="leading" secondItem="7" secondAttribute="trailing" constant="4" id="gTX-y1-e2b"/>
-                    <constraint firstItem="5" firstAttribute="top" secondItem="sQq-jC-UEV" secondAttribute="topMargin" constant="3" id="gtR-MM-n1T"/>
-                    <constraint firstItem="3" firstAttribute="top" secondItem="sQq-jC-UEV" secondAttribute="topMargin" constant="2" id="hRW-i2-PsO"/>
-                    <constraint firstItem="11" firstAttribute="leading" secondItem="QpB-pi-hRP" secondAttribute="trailing" constant="4" id="lZW-D9-jzT"/>
-                    <constraint firstItem="LZy-r3-ulR" firstAttribute="top" secondItem="Nv0-oE-v77" secondAttribute="bottom" constant="12" id="nBe-nI-4le"/>
-                    <constraint firstItem="Nv0-oE-v77" firstAttribute="leading" secondItem="3" secondAttribute="trailing" constant="14" id="omc-xb-BkM"/>
-                    <constraint firstItem="QpB-pi-hRP" firstAttribute="top" secondItem="7" secondAttribute="top" id="otk-cA-PRQ"/>
+                    <constraint firstItem="3" firstAttribute="leading" secondItem="5" secondAttribute="trailing" constant="8" id="TSF-NI-k9E"/>
+                    <constraint firstItem="W3O-NA-GVU" firstAttribute="centerY" secondItem="sQq-jC-UEV" secondAttribute="centerY" id="Tjq-DE-rZI"/>
+                    <constraint firstItem="74V-Vo-VSv" firstAttribute="trailing" secondItem="5" secondAttribute="trailing" id="TvM-Fu-oq8"/>
+                    <constraint firstItem="5" firstAttribute="centerY" secondItem="sQq-jC-UEV" secondAttribute="centerY" id="X5X-i7-Kuc"/>
+                    <constraint firstItem="GLa-Gg-rfq" firstAttribute="leading" secondItem="3" secondAttribute="leading" id="Xq2-Lo-Xaf"/>
+                    <constraint firstItem="61k-z8-XyA" firstAttribute="centerY" secondItem="sQq-jC-UEV" secondAttribute="centerY" id="ZYF-t6-IkP"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="W3O-NA-GVU" secondAttribute="trailing" constant="5" id="aIV-de-10d"/>
+                    <constraint firstItem="L8z-3T-bfY" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" id="f5O-6w-84q"/>
+                    <constraint firstItem="3" firstAttribute="top" secondItem="sQq-jC-UEV" secondAttribute="topMargin" constant="12" id="hRW-i2-PsO"/>
+                    <constraint firstItem="L8z-3T-bfY" firstAttribute="top" secondItem="PLc-nO-L3r" secondAttribute="top" id="oD8-Ht-Gog"/>
+                    <constraint firstItem="PLc-nO-L3r" firstAttribute="leading" secondItem="3" secondAttribute="leading" id="vUT-z4-WhA"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="fileImageView" destination="5" id="6"/>
-                <outlet property="imageAvailableOffline" destination="QpB-pi-hRP" id="XpD-KZ-bez"/>
-                <outlet property="imageDownloaded" destination="7" id="8"/>
-                <outlet property="labelInfoFile" destination="11" id="c3X-GA-6oC"/>
                 <outlet property="labelTitle" destination="3" id="4"/>
-                <outlet property="sharedByLinkImage" destination="Nv0-oE-v77" id="MYF-CG-pGz"/>
-                <outlet property="sharedWithUsImage" destination="LZy-r3-ulR" id="RhE-gN-f5d"/>
             </connections>
+            <point key="canvasLocation" x="48.5" y="70"/>
         </tableViewCell>
     </objects>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
+    </simulatedMetricsContainer>
 </document>
