add share info buttons and their targets, more file icons and some tweaks for the action sheets

--- a/Owncloud iOs Client/Cells/CustomCell/CustomCellFileAndDirectory.xib
+++ b/Owncloud iOs Client/Cells/CustomCell/CustomCellFileAndDirectory.xib
@@ -34,7 +34,7 @@
                         </constraints>
                     </imageView>
                     <button opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="bottomRight" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="61k-z8-XyA" userLabel="Shared Info Button">
-                        <rect key="frame" x="258" y="28" width="18" height="18"/>
+                        <rect key="frame" x="290" y="15" width="18" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="18" id="r2G-eN-27g"/>
                             <constraint firstAttribute="height" constant="18" id="zcE-dJ-FhW"/>
@@ -45,18 +45,18 @@
                         </state>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="One Month Ago - 14 files inside" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GLa-Gg-rfq" userLabel="File Info Label">
-                        <rect key="frame" x="75" y="32" width="178" height="18"/>
+                        <rect key="frame" x="75" y="32" width="207" height="18"/>
                         <fontDescription key="fontDescription" name="SourceSansPro-Regular" family="Source Sans Pro" pointSize="14"/>
                         <color key="textColor" red="0.58823529411764708" green="0.62352941176470589" blue="0.66666666666666663" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Folder Available offline" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L8z-3T-bfY" userLabel="Shared Info Label">
-                        <rect key="frame" x="93" y="56" width="160" height="10"/>
+                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Folder Available offline" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L8z-3T-bfY" userLabel="Shared Info Label">
+                        <rect key="frame" x="93" y="56" width="189" height="10"/>
                         <fontDescription key="fontDescription" name="SourceSansPro-Semibold" family="Source Sans Pro" pointSize="10"/>
                         <color key="textColor" red="0.45098039215686275" green="0.80784313725490198" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="help-icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="PLc-nO-L3r" userLabel="Shared Info Image View">
+                    <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="help-icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="PLc-nO-L3r" userLabel="Shared Info Image View">
                         <rect key="frame" x="75" y="56" width="10" height="10"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="10" id="5gs-Qg-n0L"/>
@@ -64,7 +64,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Example of normal folder" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3" userLabel="File Name">
-                        <rect key="frame" x="75" y="15" width="178" height="18"/>
+                        <rect key="frame" x="75" y="15" width="207" height="18"/>
                         <fontDescription key="fontDescription" name="SourceSansPro-Semibold" family="Source Sans Pro" pointSize="14"/>
                         <color key="textColor" red="0.3529411764705882" green="0.41176470588235292" blue="0.47058823529411764" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="highlightedColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -76,24 +76,36 @@
                             <constraint firstAttribute="height" constant="18" id="pxr-eo-Ofk"/>
                         </constraints>
                     </imageView>
+                    <button opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="bottomRight" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CiW-QY-vPw" userLabel="Shared with me button">
+                        <rect key="frame" x="290" y="42" width="18" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="18" id="BeA-jw-hLp"/>
+                            <constraint firstAttribute="width" constant="18" id="y4u-OL-4dT"/>
+                        </constraints>
+                        <color key="tintColor" red="0.85490196080000003" green="0.27058823529999998" blue="0.1450980392" alpha="1" colorSpace="calibratedRGB"/>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="GLa-Gg-rfq" firstAttribute="top" secondItem="3" secondAttribute="bottom" constant="-1" id="0Wr-Fn-tUv"/>
                     <constraint firstItem="5" firstAttribute="leading" secondItem="kmb-eZ-RnB" secondAttribute="leadingMargin" constant="9" id="Coe-Sl-2qy"/>
+                    <constraint firstItem="CiW-QY-vPw" firstAttribute="top" secondItem="61k-z8-XyA" secondAttribute="bottom" constant="9" id="Gc5-7p-bcq"/>
                     <constraint firstItem="L8z-3T-bfY" firstAttribute="top" secondItem="GLa-Gg-rfq" secondAttribute="bottom" constant="6" id="GxV-l8-zDd"/>
-                    <constraint firstItem="61k-z8-XyA" firstAttribute="centerY" secondItem="kmb-eZ-RnB" secondAttribute="centerY" id="HiO-KZ-z8p"/>
+                    <constraint firstItem="61k-z8-XyA" firstAttribute="centerY" secondItem="kmb-eZ-RnB" secondAttribute="centerY" constant="-13.25" id="HiO-KZ-z8p"/>
                     <constraint firstItem="L8z-3T-bfY" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" id="ICo-9j-fqc"/>
                     <constraint firstItem="L8z-3T-bfY" firstAttribute="leading" secondItem="PLc-nO-L3r" secondAttribute="trailing" constant="8" id="IIe-8P-ZnC"/>
                     <constraint firstItem="3" firstAttribute="leading" secondItem="5" secondAttribute="trailing" constant="13" id="LaE-AH-2ND"/>
+                    <constraint firstItem="CiW-QY-vPw" firstAttribute="trailing" secondItem="61k-z8-XyA" secondAttribute="trailing" id="Mcj-aG-LiP"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="61k-z8-XyA" secondAttribute="trailing" constant="12" id="O1Q-36-xkc"/>
                     <constraint firstItem="L8z-3T-bfY" firstAttribute="bottom" secondItem="PLc-nO-L3r" secondAttribute="bottom" id="QRW-fW-yLb"/>
                     <constraint firstItem="74V-Vo-VSv" firstAttribute="trailing" secondItem="5" secondAttribute="trailing" constant="5" id="RWZ-om-uFO"/>
                     <constraint firstItem="GLa-Gg-rfq" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" id="Wlv-ic-IFW"/>
                     <constraint firstItem="PLc-nO-L3r" firstAttribute="leading" secondItem="3" secondAttribute="leading" id="aZq-q2-GaK"/>
                     <constraint firstItem="74V-Vo-VSv" firstAttribute="bottom" secondItem="5" secondAttribute="bottom" constant="3" id="b4C-Cv-252"/>
-                    <constraint firstItem="61k-z8-XyA" firstAttribute="leading" secondItem="GLa-Gg-rfq" secondAttribute="trailing" constant="5" id="dpS-cg-fLy"/>
+                    <constraint firstItem="61k-z8-XyA" firstAttribute="leading" secondItem="GLa-Gg-rfq" secondAttribute="trailing" constant="8" id="dpS-cg-fLy"/>
                     <constraint firstItem="3" firstAttribute="top" secondItem="kmb-eZ-RnB" secondAttribute="topMargin" constant="7" id="n8m-gW-ugj"/>
                     <constraint firstItem="GLa-Gg-rfq" firstAttribute="leading" secondItem="3" secondAttribute="leading" id="niF-wZ-H3R"/>
                     <constraint firstItem="5" firstAttribute="centerY" secondItem="kmb-eZ-RnB" secondAttribute="centerY" id="t2P-RA-NAI"/>
+                    <constraint firstItem="CiW-QY-vPw" firstAttribute="leading" secondItem="61k-z8-XyA" secondAttribute="leading" id="teB-ZV-Eig"/>
                     <constraint firstItem="L8z-3T-bfY" firstAttribute="top" secondItem="PLc-nO-L3r" secondAttribute="top" id="uz1-yU-ka3"/>
                 </constraints>
             </tableViewCellContentView>
@@ -108,8 +120,9 @@
                 <outlet property="sharedInfoButton" destination="61k-z8-XyA" id="1Oj-pl-jH3"/>
                 <outlet property="sharedInfoImageView" destination="PLc-nO-L3r" id="f2Y-hm-f6c"/>
                 <outlet property="sharedInfoLabel" destination="L8z-3T-bfY" id="vaW-7G-NEa"/>
+                <outlet property="sharedWithMeButton" destination="CiW-QY-vPw" id="Xf0-aW-K32"/>
             </connections>
-            <point key="canvasLocation" x="55" y="67"/>
+            <point key="canvasLocation" x="54.5" y="66.5"/>
         </tableViewCell>
     </objects>
     <resources>
